# RepOGovnor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.toml  README.md  REQUIREMENTS.toml  ROADMAP.md  SECURITY.md  VISION.md  flake.nix  hooks.json  package.nix  plugin.json  project.config.example.toml
.agents/: hooks.json
.claude/: settings.json
.codex/: agent-governance.toml  governance-cli.env  hooks.json
.codex-plugin/: plugin.json
docs/: agent-environment-matrix.md  (+10 more)
rust/task-registry-flow-cli/: Cargo.toml  deny.toml
rust/task-registry-flow-cli/src/: activation.rs  backlog_check.rs  cli.rs  cost_coverage.rs  cost_evidence.rs  cost_ingest.rs  cost_pricing.rs  cost_record.rs  cost_report.rs  cost_targets.rs  hook_io.rs  install.rs  landing.rs  main.rs  manifest.rs  metrics.rs  model.rs  model_attribution.rs  mutation_hook.rs  plan_contract.rs  policy.rs  receipts.rs  registry_io.rs  release_checks.rs  reports.rs  reviewer_report.rs  runtime.rs  schema.rs  source_limit.rs  status_checks.rs  tests.rs  validation.rs  verifiers.rs  verify_chain.rs  version_check.rs
rust/task-registry-flow-cli/src/tests/: activation_terminal_tests.rs  archive_tests.rs  backlog_check_tests.rs  cost_capture_review_tests.rs  hook_command_tests.rs  landing_tests.rs  metrics_tests.rs  mod.rs  model_attribution_tests.rs  receipt_chain_tests.rs  release_source_tests.rs  reviewer_report_tests.rs  security_tests.rs  state_transition_tests.rs  status_check_tests.rs  typed_runtime_surface_tests.rs  verify_chain_tests.rs  version_check_tests.rs
(+135 files in other folders)
