[package]
name = "task-registry-flow-cli"
version = "2.0.0"
edition = "2024"
publish = false
license = "MIT"

[[bin]]
name = "task-registry-flow"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
fs2 = "0.4"
jsonschema = { version = "0.46.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.8.23"
